# HARDS

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: docs.yml  pypi.yml  quality.yml  tests.yml
docs/source/: api.rst  conf.py  examples.rst  filesystem.rst  index.rst
docs/source/_static/: custom.css
docs/source/examples_directory/: example_filesystem_sub_dataset.ipynb
examples/: example_filesystem_application.ipynb  example_filesystem_introduction.ipynb
src/hards/: __init__.py  api.py  filesystem.py
tests/: conftest.py  test_examples.py  test_filesystem_database.py  test_filesystem_datapoint.py  test_filesystem_dataset.py  test_filesystem_integration.py
